fixed styles to exclude overflow

--- a/src/pages/ProductPage/ProductPage.module.scss
+++ b/src/pages/ProductPage/ProductPage.module.scss
@@ -7,12 +7,12 @@
 }
 
 .swiper {
-  width: calc(100vw - 24px);
+  width: calc(100vw - 44px);
 }
 
 .wrapper {
-  width: calc(100vw - 24px);
-  height: calc(100vw - 24px);
+  width: calc(100vw - 44px);
+  height: calc(100vw - 44px);
   border: solid 1px $common-black;
   border-radius: 12px;
   overflow: hidden;
